--- a/projects/templates/home.html
+++ b/projects/templates/home.html
@@ -1,2 +1,20 @@
-<h1>Welcome,guest</h1>
+{% extends 'base.html' %}
+{% load bootstrap5 %}
+{%load static%}
+{% block content %}
+<div class="background">
+    <img src="https://wallpapercave.com/wp/wp8613307.png" alt="Nature" class="responsive">    
+  </div>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
 
