--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -14,11 +14,11 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Sign In</h3>
+          
         </div>
         <div class="panel-body">
  
-          <form  method="post" action="{% url 'home' %}">
+          <form  method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <legend class="border-bottom mb-4">Log In</legend>
             {{ form|crispy }}
