--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -6,22 +6,24 @@
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% if title %}
-	<title>Awwards -{{ title}}</title>
+	<title>{{ title}}</title>
 	{% else %}
 			<title>Awwards</title>
 	{% endif %}
 
   {% block styles %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     {% bootstrap_css %}
   {% endblock %}
 
 </head>
 <body>
-	<div class="fluid-container">
-	</div>
-	<div class ="container">
 	
+	<div class ="container-fluid">
+	{% include 'navbar.html' %}
     {% block content %}
 
 	{% endblock %}
