--- a/projects/templates/home.html
+++ b/projects/templates/home.html
@@ -5,16 +5,49 @@
 <div class="background">
     <img src="https://wallpapercave.com/wp/wp8613307.png" alt="Nature" class="responsive">    
   </div>
+ 
+      <h2 style=" font-family: 'Lora', serif;" id="projects">Here are some projects</h2>
+      <div class="row" style="justify-content: center;">
+  {% for project in projects %}
+  
+  <div class="column">
+    
+    <div class="indexprojects-card " style=" font-family: 'Lora', serif;">
+        <h4 style="text-transform: uppercase;">Project Title: {{project.title}}</h4>
+        <a href="{% url 'viewproject' project.id %}"><img src="{{project.image.url}}" alt="{{project.description}}"></a>
+        <br>
+        <br>
+        <p>Project Link: <a href="{{project.link}}">{{project.link}}</a></p>
+        <small class="text-center">Owner: {{project.profile}}</small>
+        <br><br>
+        <a href="{% url 'viewproject' project.id %}" class="btn btn-outline-success btn-sm">View Project Details</a>                
+        <a href="{% url 'rate' project.id  %}" class="btn btn-outline-danger btn-sm">Rate</a>
+        <br>
+        <br>
+{%endfor%}
+</div>
+</div>
+</div>
+
 {% endblock %}
 
 
 
+<!-- 
+{% for project in projects %}
+  <div class="indexprojects-card col-md-6">
+      <h3 style="text-transform: uppercase;">Project Title: {{project.title}}</h3>
+      <a href="{% url 'viewproject' project.id %}"><img src="{{project.image.url}}" alt="{{project.description}}"></a>
+      <br>
+      <br>
+      
+      <p>Project Link: <a href="{{project.link}}">{{project.link}}</a></p>
+      <small class="text-center">Submitted By: {{project.profile}}</small>
+      {% endfor %}
 
 
 
 
 
 
-
-
-
+ -->
