--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -17,19 +17,47 @@
         color:wheat;
         font-family: 'Lora', serif;
     }
+    #btn{
+        background-color: rgb(187, 184, 184);
+    }
 </style>
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}" id="b">Awwards</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" id="btn">
+        <span class="navbar-toggler-icon" id="btn"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup" id="btn">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="{% url 'home'%}" id="txt">Home</a>
-          <a class="nav-link" href="#" id="txt">Projects</a>
-          <a class="nav-link" href="#" id="txt">Post</a>
+          <a class="nav-link" href="#projects" id="txt">Projects</a>
+          <a class="nav-link" href="{% url 'uploadproject' %}" id="txt">Post</a>
         </div>
+        <div class="navbar-right">
+
+          <form class="navbar-form" role="search" action="{% url 'search_results' %}"style="margin-left:30px ;" >
+  
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search project with title" name="project">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              </div>
+            </div>
+  
+          </form>
+          
+         
+      </div>
+      {% if user.is_authenticated %}
+          <a href="{% url 'profile'%}" class="nav-link" id="txt" style="margin-left: 400px;">@{{user.username}}</i></a>
+          <a href="{% url 'logout'%}" class="nav-link" id="txt">Logout</a>
+          
+          
+          {% else %}
+          
+              <a href="{% url 'login'%}" class="nav-link" id="txt">Login</a>
+          
+          {% endif %}
       </div>
     </div>
   </nav>
