--- a/projects/templates/project.html
+++ b/projects/templates/project.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% load static %}
 {% load bootstrap5 %}
 
@@ -6,31 +7,29 @@
 <div class="container-fluid viewproject">
     <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-10">
+        <div class="col-md-7">
             <div id="viewproject">
                 {% for project in project %}
-                <p class="text-center">Project Link: <a href="{{project.link}}">{{project.link}}</a></p>
-                <h4 class="text-center">Project Title: {{project.title}}</h4>
+                <h5>Project Title: {{project.title}}</h5>
                 <br>
                 <br>
-                <div class="text-center">
-                    <span class="text-center">Design Rating: {{project.design_rate}}</span> |
-                    <span class="text-center">Usability Rating: {{project.usability_rate}}</span> |
-                    <span class="text-center">Content Rating: {{project.content_rate}}</span>
-                </div>
-                <br>
-                <br>
-                <small style="margin-left: 150px;">Submitted By: {{project.profile}}</small>
-                <img src="{{project.image.url}}" alt="{{project.description}}">
+               
+                
+            
+                <img src="{{project.image.url}}" class="responsive" alt="{{project.description}}">
                 <br>
                 <br>
                 <br>
+                <h6>Project owner: {{project.profile}}</h6>
                 <p class="viewdescription">Project Description: {{project.description}}</p>
+                <p>Project Link: <a href="{{project.link}}">{{project.link}}</a></p>
                 {% endfor %}
             </div>
 
         </div>
-        <div class="col-md-1"></div>
+        <div class="col-md-5">
+            
+        </div>
     </div>
 </div>
 
