--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -9,9 +9,10 @@
 
         </div>
         <div class="col-md-4">
+            <legend>You have been logged out.</legend>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="text-center">Sign Up</h3>
+                    
                 </div>
                 <div class="panel-body">
                     <div class = "border-top pt-3">
